force-app/main/default/objects/Expense_Allocation__c/Expense_Allocation__c.object-meta.xml
<CustomObject>
    <label>Expense Allocation</label>
    <pluralLabel>Expense Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <nameField>
        <label>Expense Allocation Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>