force-app/main/default/objects/Expense_Allocation__c/fields/Shared_Asset__c.field-meta.xml
<CustomField>
    <fullName>Shared_Asset__c</fullName>
    <label>Shared Asset</label>
    <type>Lookup</type>
    <referenceTo>Shared_Asset__c</referenceTo>
    <relationshipLabel>Expense Allocations</relationshipLabel>
    <relationshipName>Expense_Allocations</relationshipName>
</CustomField>